--- a/public/success.html
+++ b/public/success.html
@@ -1,13 +1,21 @@
 <html>
-    <title>MelleWS (error)</title>
+    <title>MelleWS (success)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
-    <div class="w3-container w3-green w3-padding-32">
-      <img 
-        src="/images/logo-white-v2.svg"
-        alt="MelleWS"
-        height="36"
-        class="w3-display-topmiddle w3-margin" />
+    <div class="w3-top">
+      <div class="w3-bar w3-green w3-padding w3-card">
+        <a href="index.html"><img 
+          src="./images/logo-black-v2.svg"
+          alt="MelleWS"
+          height="36"
+          class=""/></a>
+        <div class="w3-right w3-hide-small">
+          <a href="drive.htm" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-pale-green">MWSDrive</a>
+          <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge w3-hover-pale-green">FreeDB</a>
+          <a href="info.htm" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-pale-green">Info</a>
+          <a href="createuser.htm" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><b>Sign Up</b></a>
+        </div>
+      </div>
     </div>
     <div class="w3-container w3-display-middle">
       <h1>Success!</h1>
