--- a/public/info.htm
+++ b/public/info.htm
@@ -8,10 +8,10 @@
     <div class="w3-top w3-margin-bottom">
       <div class="w3-bar w3-white w3-padding w3-card w3-margin-bottom">
         <a href="index.html"><img 
-          src="./images/logo-black-v2.svg"
-          alt="MelleWS"
-          height="36"
-          class=""/></a>
+        src="./images/logo-black-v2.svg"
+        alt="MelleWS"
+        height="36"
+        class=""/></a>
         <div class="w3-right w3-hide-small">
           <a href="drive.htm" class="w3-bar-item w3-button w3-round-xxlarge">MWSDrive</a>
           <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge">FreeDB</a>
@@ -23,16 +23,6 @@
     <br/>
     <br/>
     <br/>
-    <p class="w3-margin-left">Welcome to MWSDrive, a free storage applet with a maximum upload size of 200 MB.</p>
-    <div class="w3-card w3-margin w3-margin-top" style="width: 25%">
-        <div class="w3-container w3-teal">
-          <h2>Upload</h2>
-        </div>
-        <form class="w3-container w3-padding" action="upl" method="post" enctype="multipart/form-data" width=30>
-            <input class="w3-input" type="text" name="usrID" placeholder="User ID">
-            <input class="w3-input" type="file" name="filetoupload" required>
-            <input class="w3-button" type="submit">
-        </form>
-    </div>
+    <p class="w3-margin">To be added.</p>
   </body>
 </html>
