--- a/public/interr.html
+++ b/public/interr.html
@@ -2,12 +2,20 @@
     <title>MelleWS (error)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
-    <div class="w3-container w3-red w3-padding-32">
-      <img 
-        src="/images/logo-white-v2.svg"
-        alt="MelleWS"
-        height="36"
-        class="w3-display-topmiddle w3-margin" />
+    <div class="w3-top">
+      <div class="w3-bar w3-red w3-padding w3-card">
+        <a href="index.html"><img 
+          src="./images/logo-black-v2.svg"
+          alt="MelleWS"
+          height="36"
+          class=""/></a>
+        <div class="w3-right w3-hide-small">
+          <a href="drive.htm" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-pale-red">MWSDrive</a>
+          <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge w3-hover-pale-red">FreeDB</a>
+          <a href="info.htm" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-pale-red">Info</a>
+          <a href="createuser.htm" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><b>Sign Up</b></a>
+        </div>
+      </div>
     </div>
     <div class="w3-container w3-display-middle">
       <h1>Error!</h1>
